--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ var categoryToToColor = {   'hometown':white,
                             'workplace':white};
 
 //globals
-var shouldCircuit = false;
+var shouldCircuit = true;
 var thePopup = null;
 var canvas = null;
 
@@ -827,6 +827,8 @@ function initShaders() {
 
 
 function handleLoadedTexture(texture) {
+    stopLoadingWithText();
+
     gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, true);
     gl.bindTexture(gl.TEXTURE_2D, texture);
     gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, texture.image);
@@ -835,6 +837,9 @@ function handleLoadedTexture(texture) {
     gl.generateMipmap(gl.TEXTURE_2D);
 
     gl.bindTexture(gl.TEXTURE_2D, null);
+
+    doEarthFlyin();
+    tick();
 }
 
 
@@ -882,8 +887,8 @@ function initTexture() {
         handleLoadedTexture(earthTexture)
     }
 
-    //earthTexture.image.src = "http://localhost/lesson11/world.jpg";
     earthTexture.image.src = "world.jpg";
+    startLoadingWithText("Initializing WebGL...");
 }
 
 var mvMatrix = mat4.create();
@@ -950,7 +955,6 @@ function handleMouseDown(event) {
 }
 
 function fmButtonClick() {
-
     //get the id
     var myCategory = $j(this).attr('id');
     if(myCategory)
@@ -1018,11 +1022,26 @@ function fmButtonClick() {
     }
     if(myCategory == 'workplace')
     {
-        tweenToWork();
+        //do some more logic to find a workplace
+        if(myWorkplaces.length)
+        {
+            tweenToWork();
+        }
+        else
+        {
+            askForWorkplace();
+        }
     }
     if(myCategory == 'education')
     {
-        tweenToEducation();
+        if(myEducations.length)
+        {
+            tweenToEducation();
+        }
+        else
+        {
+            askForEducation();
+        }
     }
 
 }
@@ -1193,10 +1212,6 @@ function mouseClickPick(event) {
     {
         arcClick(theArc);
     }
-    else
-    {
-        console.log("No arc under mouse click :-/ ");
-    }
 }
 
 function getArcAtMousePos(x,y) {
@@ -1307,7 +1322,9 @@ function bubbleShow(textForBubble)
     thePopup.HideBubblePopup(10);
     thePopup.ShowBubblePopup({      'openingDelay':tweenTime*0.8,
                                     'closingSpeed':100,
-                                    'distance':'60px',
+                                    'position':'top',
+                                    'align':'center',
+                                    'distance':'0px',
                                     'innerHtml':textForBubble,
                                     'innerHtmlStyle':   {
                                                             'max-width':'500px',
@@ -1606,9 +1623,9 @@ function webGLStart() {
     document.onmouseup = handleMouseUp;
     document.onmousemove = handleMouseMove;
 
-    tick();
+    //tick();
     //zoom in to earth
-    doEarthFlyin();
+    //doEarthFlyin();
 }
 
 function doEarthFlyin() {
@@ -1698,6 +1715,7 @@ var friendsQueried = 0;
 var theBatchSender = null;
 
 var boxTimeout = null;
+var notifyTimeout = null;
 var isLoading = false;
 
 //me stuff
@@ -1917,7 +1935,7 @@ connectionObj.prototype.buildIfReady = function () {
         if(isLoading)
         {
             //not loading anymore!
-            stopLoading();
+            stopLoadingWithText();
         }
     }
 
@@ -2198,6 +2216,10 @@ placeObj.prototype.findGps = function () {
     {
         if(this.ourJson.employer.name) //pretty sure all of them have employer names
         {
+            var employerName = this.ourJson.employer.name;
+            //heuristic...
+            employerName += " inc";
+
             this.makeFbGraphSearchForGps(this.ourJson.employer.name);
         }
     }
@@ -2603,13 +2625,81 @@ function launchFbAvalanche() {
     console.log("***********You're logged in!***************");
 
     //start the "loading"
-    startLoading();
+    startLoadingWithText("Querying the Facebook Graph...");
 
 
     //do a query for your friends
     FB.api('/me?fields=friends',handleFriendsBack);
     //get yourself too
     FB.api('/me',handleMeBack);
+}
+
+function startLoadingWithText(theText) {
+    startLoading();
+
+    topNotify(theText);
+}
+
+function stopLoadingWithText() {
+    stopLoading();
+
+    topNotifyClear();
+}
+
+function topNotify(theText) {
+    topNotifyHtml("<h1>" + theText + "</h1>");
+}
+
+function topNotifyHtml(theText) {
+    //and if someone is clicking fast, get rid of it
+    if(notifyTimeout)
+    {
+        clearTimeout(notifyTimeout);
+    }
+
+    //basically, if its already displayed, hide it and come back in 700ms
+    if(!$j('#topNotifyBarHolder').hasClass('topNotifyBarHidden'))
+    {
+        //clear and come back
+        topNotifyClear();
+        var jsToExecute = "topNotifyHtml('" + theText + "');";
+        notifyTimeout = setTimeout(jsToExecute,700);
+        console.log(jsToExecute);
+        return;
+    }
+
+    $j('#topNotifyBar').html("<h1>" + theText + "</h1>");
+
+    $j('#topNotifyBarHolder').removeClass('topNotifyBarHidden');
+}
+
+function askForHometown() {
+    theHtml = "<h1>A Mysterious Past</h1>";
+    theHtml += "<h4>You don\&#39;t seem to have a hometown listed on your Facebook profile. Try adding one and then coming back to the app!</h4>";
+    topNotifyHtml(theHtml);
+}
+
+function askForCurrent() {
+    theHtml = "<h1>Carmen Sandiego</h1>";
+    theHtml += "<h4>You don\&#39;t seem to have a current location listed on your Facebook profile. Try adding one and then coming back to the app!</h4>";
+    topNotifyHtml(theHtml);
+}
+
+function askForWorkplace() {
+    theHtml = "<h1>Kramer</h1>";
+    theHtml += "<h4>You don\&#39;t seem to have any workplaces listed on your Facebook profile. Try adding one and then coming back to the app!</h4>";
+    topNotifyHtml(theHtml);
+}
+
+function askForEducation() {
+    theHtml = "<h1>Self Schooled</h1>";
+    theHtml += "<h4>You don\&#39;t seem to have any past educational institutions listed on your Facebook profile. Try adding one and then coming back!</h4>";
+    topNotifyHtml(theHtml);
+}
+
+function topNotifyClear() {
+    $j('#topNotifyBar').html('');
+    $j('#topNotifyBarHolder').addClass('topNotifyBarHidden');
 }
 
 function startLoading() {
@@ -2620,7 +2710,6 @@ function startLoading() {
     $j('.loadingGif').css('left',String(wWidth/2 - 220*0.5) + 'px');
     $j('.loadingGif').css('top',String(wHeight / 2 - 19*0.5) + 'px');
     $j('.loadingGif').fadeIn();
-
 }
 
 function stopLoading() {
@@ -2806,6 +2895,13 @@ function handleMeBack(response){
             duplicateWorkplaceConnections(thisWork);
         }
     }
+    else
+    {
+        if(currentDisplayCategory == 'workplace')
+        {
+            askForWorkplace();
+        }
+    }
     if(response.education && response.education[0])
     {
         setFirstEducation(response.education[0]);
@@ -2813,6 +2909,13 @@ function handleMeBack(response){
         {
             var thisEducation = response.education[j];
             duplicateEducationConnections(thisEducation);
+        }
+    }
+    else
+    {
+        if(currentDisplayCategory == 'education')
+        {
+            askForEducation();
         }
     }
 }
@@ -2872,6 +2975,14 @@ function initFacebook(){
         <div id="friendQueryCounterPics">
         </div>
     
+    </div>
+</div>
+
+<div id="topNotifyBarWrapper" style="width:100%;text-align:center;position:absolute;top:0px;">
+    <div id="topNotifyBarHolder" class="buttonGradient smooth topNotifyBar topNotifyBarHidden bubbleToStop" onclick="topNotifyClear()" style="display:inline-block;cursor:pointer">
+        <div id="topNotifyBar">
+
+        </div>
     </div>
 </div>
 
