--- a/index.html
+++ b/index.html
@@ -3143,7 +3143,7 @@ function initFacebook(){
     <div id="countdownClock" class="countdownClockText">
 
     </div>
-    Until next Query..
+    Until next Query...
 </div>
 
 </body>
